LB-example/dev-ns-deploy-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo
  namespace: dev
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 250m
            memory: 250Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-lb-svc
  namespace: dev
spec:
  selector:
    app: demo
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-cluster-svc
  namespace: dev
spec:
  selector:
    app: demo
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
